CompatHelper: bump compat for SparseArrayKit to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,7 @@ NamedGraphs = "0.1.11"
 Observers = "0.0.8"
 Requires = "1.3"
 SimpleTraits = "0.9"
-SparseArrayKit = "0.2.1"
+SparseArrayKit = "0.2.1, 0.3"
 SplitApplyCombine = "1.2"
 StaticArrays = "1.5.12"
 Suppressor = "0.2"
