--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ Combinatorics = "1"
 Compat = "3, 4"
 DataGraphs = "0.1.7"
 DataStructures = "0.18"
-Dictionaries = "0.3.15"
+Dictionaries = "0.3.15, 0.4"
 Distributions = "0.25.86"
 DocStringExtensions = "0.8, 0.9"
 Graphs = "1.8"
