CompatHelper: bump compat for KrylovKit to 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -53,7 +53,7 @@ GraphsFlows = "0.1.1"
 ITensors = "0.3.23"
 IsApprox = "0.1"
 IterTools = "1.4.0"
-KrylovKit = "0.6.0"
+KrylovKit = "0.6.0, 0.7"
 NamedGraphs = "0.1.20"
 Observers = "0.2"
 Requires = "1.3"
