--- a/Project.toml
+++ b/Project.toml
@@ -53,7 +53,7 @@ DocStringExtensions = "0.8, 0.9"
 EinExprs = "0.6.4"
 Graphs = "1.8"
 GraphsFlows = "0.1.1"
-ITensors = "0.3.58"
+ITensors = "0.3.58, 0.4"
 IsApprox = "0.1"
 IterTools = "1.4.0"
 KrylovKit = "0.6.0"
