--- a/Project.toml
+++ b/Project.toml
@@ -45,7 +45,7 @@ ITensorNetworksEinExprsExt = "EinExprs"
 AbstractTrees = "0.4.4"
 Combinatorics = "1"
 Compat = "3, 4"
-DataGraphs = "0.1.7"
+DataGraphs = "0.1.7, 0.2"
 DataStructures = "0.18"
 Dictionaries = "0.4"
 Distributions = "0.25.86"
