--- a/Project.toml
+++ b/Project.toml
@@ -58,8 +58,8 @@ ITensors = "0.3.58"
 IsApprox = "0.1"
 IterTools = "1.4.0"
 KrylovKit = "0.6, 0.7"
-NamedGraphs = "0.1.23"
 NDTensors = "0.2, 0.3"
+NamedGraphs = "0.1.23, 0.6"
 Observers = "0.2"
 PackageExtensionCompat = "1"
 Requires = "1.3"
