--- a/Project.toml
+++ b/Project.toml
@@ -58,7 +58,7 @@ DocStringExtensions = "0.9"
 EinExprs = "0.6.4"
 Graphs = "1.8"
 GraphsFlows = "0.1.1"
-ITensorMPS = "0.1"
+ITensorMPS = "0.1, 0.2"
 ITensors = "0.4, 0.5, 0.6"
 IsApprox = "0.1"
 IterTools = "1.4.0"
