--- a/Project.toml
+++ b/Project.toml
@@ -62,7 +62,7 @@ ITensorMPS = "0.1"
 ITensors = "0.4, 0.5, 0.6"
 IsApprox = "0.1"
 IterTools = "1.4.0"
-KrylovKit = "0.6, 0.7"
+KrylovKit = "0.6, 0.7, 0.8"
 NDTensors = "0.3"
 NamedGraphs = "0.6.0"
 OMEinsumContractionOrders = "0.8.3"
