--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,10 @@ KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 NDTensors = "23ae76d9-e61a-49c4-8f12-3f1a16adf9cf"
+NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 NamedGraphs = "678767b0-92e7-4007-89e4-4527a8725b19"
+OMEinsumContractionOrders = "6f22d1fd-8eed-4bb7-9776-e7d684900715"
+Observers = "338f10d5-c7f1-4033-a7d1-f9dec39bcaa0"
 PackageExtensionCompat = "65ce6f38-6b18-4e1d-a461-8949797d7930"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
