CompatHelper: bump compat for OMEinsumContractionOrders in [weakdeps] to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -65,7 +65,7 @@ IterTools = "1.4.0"
 KrylovKit = "0.6, 0.7"
 NDTensors = "0.3"
 NamedGraphs = "0.6.0"
-OMEinsumContractionOrders = "0.8.3"
+OMEinsumContractionOrders = "0.8.3, 0.9"
 Observers = "0.2.4"
 PackageExtensionCompat = "1"
 SerializedElementArrays = "0.1"
