--- a/Project.toml
+++ b/Project.toml
@@ -60,7 +60,7 @@ Graphs = "1.8"
 GraphsFlows = "0.1.1"
 ITensorMPS = "0.1"
 ITensors = "0.4, 0.5, 0.6"
-IsApprox = "0.1"
+IsApprox = "0.1, 1"
 IterTools = "1.4.0"
 KrylovKit = "0.6, 0.7"
 NDTensors = "0.3"
