CompatHelper: bump compat for IsApprox to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -64,7 +64,7 @@ Graphs = "1.8"
 GraphsFlows = "0.1.1"
 ITensorMPS = "0.2.2"
 ITensors = "0.6.8"
-IsApprox = "0.1, 1"
+IsApprox = "0.1, 1, 2"
 IterTools = "1.4.0"
 KrylovKit = "0.6, 0.7, 0.8"
 MacroTools = "0.5"
