CompatHelper: bump compat for SparseArrayKit to 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -75,7 +75,7 @@ Observers = "0.2.4"
 PackageExtensionCompat = "1"
 SerializedElementArrays = "0.1"
 SimpleTraits = "0.9"
-SparseArrayKit = "0.3"
+SparseArrayKit = "0.3, 0.4"
 SplitApplyCombine = "1.2"
 StaticArrays = "1.5.12"
 StructWalk = "0.2"
