CompatHelper: bump compat for ITensorMPS to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -62,7 +62,7 @@ DocStringExtensions = "0.9"
 EinExprs = "0.6.4"
 Graphs = "1.8"
 GraphsFlows = "0.1.1"
-ITensorMPS = "0.2.2"
+ITensorMPS = "0.2.2, 0.3"
 ITensors = "0.6.8"
 IsApprox = "0.1, 1, 2"
 IterTools = "1.4.0"
