CompatHelper: bump compat for ITensors to 0.8, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -63,7 +63,7 @@ EinExprs = "0.6.4"
 Graphs = "1.8"
 GraphsFlows = "0.1.1"
 ITensorMPS = "0.3"
-ITensors = "0.7"
+ITensors = "0.7, 0.8"
 IsApprox = "0.1, 1, 2"
 IterTools = "1.4.0"
 KrylovKit = "0.6, 0.7, 0.8"
