--- a/test/Project.toml
+++ b/test/Project.toml
@@ -47,23 +47,23 @@ Graphs = "1.12.0"
 GraphsFlows = "0.1.1"
 ITensorGaussianMPS = "0.1.12"
 ITensorMPS = "0.3.6"
-ITensorNetworks = "0.12.2"
+ITensorNetworks = "0.12.2, 0.13"
 ITensorUnicodePlots = "0.1.6"
 ITensors = "0.7, 0.8, 0.9"
 KrylovKit = "0.8, 0.9"
+LinearAlgebra = "1.10.0"
 Metis = "1.5.0"
 NDTensors = "0.3, 0.4"
 NamedGraphs = "0.6.6"
 OMEinsumContractionOrders = "0.9.5"
 Observers = "0.2.5"
 OrdinaryDiffEqTsit5 = "1.1.0"
+Pkg = "1.10.0"
+Random = "1.10.0"
 SafeTestsets = "0.1.0"
 SplitApplyCombine = "1.2.3"
 StableRNGs = "1.0.2"
 Suppressor = "0.2.8"
 TensorOperations = "5.1.4"
-UnicodePlots = "3.7.2"
-LinearAlgebra = "1.10.0"
-Pkg = "1.10.0"
-Random = "1.10.0"
 Test = "1.10.0"
+UnicodePlots = "3.7.2"
