--- a/test/Project.toml
+++ b/test/Project.toml
@@ -39,7 +39,7 @@ Compat = "4.16.0"
 DataGraphs = "0.2.6"
 Dictionaries = "0.4.4"
 Distributions = "0.25.118"
-EinExprs = "0.6.8"
+EinExprs = "0.6.8, 0.7"
 Glob = "1.3.1"
 Graphs = "1.12.0"
 GraphsFlows = "0.1.1"
