CompatHelper: bump compat for OMEinsumContractionOrders to 1 for package test, (keep existing compat)

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -51,7 +51,7 @@ LinearAlgebra = "1.10.0"
 Metis = "1.5.0"
 NDTensors = "0.3, 0.4"
 NamedGraphs = "0.6.6"
-OMEinsumContractionOrders = "0.9.5"
+OMEinsumContractionOrders = "0.9.5, 1"
 Observers = "0.2.5"
 OrdinaryDiffEqTsit5 = "1.1.0"
 Pkg = "1.10.0"
