--- a/test/Project.toml
+++ b/test/Project.toml
@@ -46,7 +46,7 @@ GraphsFlows = "0.1.1"
 ITensorMPS = "0.3.6"
 ITensorNetworks = "0.13.0"
 ITensors = "0.7, 0.8, 0.9"
-KrylovKit = "0.8, 0.9"
+KrylovKit = "0.8, 0.9, 0.10"
 LinearAlgebra = "1.10.0"
 Metis = "1.5.0"
 NDTensors = "0.3, 0.4"
